콘텐츠 crud 및 장르 입력 수정 처리